second task commit

--- a/index.html
+++ b/index.html
@@ -6,11 +6,50 @@
     <title>stackacademic second task</title>
 </head>
 <body>
-   <h1>Hello world, from stackacademic</h1>
-   <h2>Hello world, from stackacademic</h2>
-   <h3>Hello world, from stackacademic</h3>
-   <h4>Hello world, from stackacademic</h4>
-   <h5>Hello world, from stackacademic</h5>
-   <h6>Hello world, from stackacademic</h6> 
-</body>
+    <header>
+        <h1>Hello world, i am RAJI S. SANJO from <a href="https://www.stackademic.com">stackademic</a></h1>
+    </header>
+    <article>
+        <strong>DOMAIN NAME AND YOUR BROWSER</strong>
+        <p>if you were asked as to what will happen when you enter the domain name in the address bar of a browser?
+            an internet user will surely tell you that web-page of
+            the site will appear but as a developer, you will be expected to analyze how the internet works behind the scene.
+            The
+            domain name made<u><em>iternet protocol (IP address)</em></u> simple to remember because is been replaced with
+            letters
+            human beings already familiar with instead of a numeric value (#.#.#.#). For instance, ipv4 or ipv6 is in 0 and
+            1(#.#.#.#) it
+            uniquely identifies the computer on the internet and that's what allows computers to talk to each other</p>
+        <p>And before the advent of DHCP, you will need to get a technician to configure your device for you for it to be able
+            to use internet services. However,
+            the <u><em>Dynamic Host Configuration Protocol</em></u> now responsible for allocating IP address to computer
+            automatically. This DHCP comes from
+            the router or some kind of server so any time you on your computer and it will provide you with unique IP
+        </p>
+        <p>How does my computer know how to find the other IP addresses whenever I type in the www.exanple.com. DNS
+            <u><em>(Domain Name System}</em></u>is the one responsible for converting
+            the domain name into correspondence IP addresses so it facilitates this communication between computers
+        </p>
+        <p>TCP transmission control protocol...this is what will ensure that whatever an internet user requested/packet get to
+            their intended destination.
+            The language of the internet is HTTP <em>(hypertext transfer protocol)</em>
+        </p>
+        
+        <p>As everything in life begins with a step so it is in programming, when the basis is solid and firm the structure on
+            it will also stand the test of time. Take the steps with ambition, determination, and a can-do attitude to
+            understand the basics as it will go a long way
+            in making another technical aspect of the journey fall in place.
+        </p>
+        <h2>ACRONYMS</h2>
+        <ol>
+            <li>ip (internet protocol)</li>
+            <li>DHCP (dynamic host configuration protocol)</li>
+            <li>DNS (Domain name system)</li>
+            <li>TCP (Transmission control protocol)</li>
+            <li>HTTP (Hypertext Transfer Protocol</li>
+        </ol>
+
+    </article>
+    <footer>&copy RajiSS</footer>
+   </body>  
 </html>
